--- a/AcsCommandHandlers/AcsCommandHandlers.csproj
+++ b/AcsCommandHandlers/AcsCommandHandlers.csproj
@@ -2,19 +2,21 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <LangVersion>10</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AcsDto\AcsDto.csproj" />
-      <ProjectReference Include="..\AcsHttpClient\AcsHttpClient.csproj" />
-      <ProjectReference Include="..\AcsRepository\AcsRepository.csproj" />
+      <ProjectReference Include="..\AcsCommands\AcsCommands.csproj" />
       <ProjectReference Include="..\AcsTypes\AcsTypes.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="CSharpFunctionalExtensions" Version="2.28.3" />
-      <PackageReference Include="LanguageExt.Core" Version="4.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Query" />
     </ItemGroup>
 
 </Project>
