--- a/AcsHttpClient/AcsHttpClient.csproj
+++ b/AcsHttpClient/AcsHttpClient.csproj
@@ -21,13 +21,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="CSharpFunctionalExtensions" Version="2.28.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+      <ProjectReference Include="..\AcsTypes\AcsTypes.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AcsTypes\AcsTypes.csproj" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
