--- a/AcsStatsWeb/appsettings.Development.json
+++ b/AcsStatsWeb/appsettings.Development.json
@@ -1,6 +1,8 @@
 {
   "BaseServicesUrl": "https://localhost:9001/api",
   "ConnectionStrings": {
-    "acsstats": "server=localhost;database=cricketarchive;user=cricketarchive;password=p4ssw0rd;Command Timeout=180"
+    "acsstats": "server=localhost;database=cricketarchive;user=cricketarchive;password=p4ssw0rd;Command Timeout=180",
+    "commands": "server=localhost;database=cricketarchive;user=cricketarchive;password=p4ssw0rd;Command Timeout=180",
+    "queries": "server=localhost;database=cricketarchive;user=cricketarchive;password=p4ssw0rd;Command Timeout=180"
   }
 }
