--- a/AcsCommands/AcsCommands.csproj
+++ b/AcsCommands/AcsCommands.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
       <PackageReference Include="CSharpFunctionalExtensions" Version="2.28.3" />
       <PackageReference Include="Dapper" Version="2.0.123" />
+      <PackageReference Include="MediatR" Version="10.0.1" />
+      <PackageReference Include="MediatR.Contracts" Version="1.0.1" />
     </ItemGroup>
 
     <ItemGroup>
