--- a/AcsStatsWeb/ClientApp/package.json
+++ b/AcsStatsWeb/ClientApp/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^5.1.0",
     "jquery": "^3.5.1",
     "luxon": "^2.4.0",
+    "ngx-toastr": "^15.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
