Updated client and server side logging

--- a/AcsStatsWeb/appsettings.Development.json
+++ b/AcsStatsWeb/appsettings.Development.json
@@ -3,5 +3,36 @@
     "acsstats": "server=localhost;database=cricketarchive;user=cricketarchive;password=p4ssw0rd;Command Timeout=180",
     "commands": "server=localhost;database=cricketarchive;user=cricketarchive;password=p4ssw0rd;Command Timeout=180",
     "queries": "server=localhost;database=cricketarchive;user=cricketarchive;password=p4ssw0rd;Command Timeout=180"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.ConsoleTheme::None, Serilog.Sinks.Console"
+        }
+      },
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "logs/log-{Date}.log",
+          "fileSizeLimitBytes": 2147483648,
+          "retainedFileCountLimit": 5
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ]
   }
 }
