--- a/AcsStatsWeb/AcsStatsWeb.csproj
+++ b/AcsStatsWeb/AcsStatsWeb.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.2" />
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
+        <PackageReference Include="Serilog.Sinks.AzureApp" Version="3.1.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
         <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
