--- a/AcsStatsWeb/appsettings.json
+++ b/AcsStatsWeb/appsettings.json
@@ -2,9 +2,12 @@
   "BaseServicesUrl": "https://acsh-web.azurewebsites.net/api",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "acsstats": "Server=acs-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive@acs-data; Pwd=aX9@QNQBfx&cFAtN; SslMode=Preferred; Command Timeout=180",
-    "commands": "Server=acs-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive@acs-data; Pwd=aX9@QNQBfx&cFAtN; SslMode=Preferred; Command Timeout=180",
-    "queries": "Server=acs-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive@acs-data; Pwd=aX9@QNQBfx&cFAtN; SslMode=Preferred; Command Timeout=180"
+//    "acsstats": "Server=acs-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive@acs-data; Pwd=aX9@QNQBfx&cFAtN; SslMode=Preferred; Command Timeout=180",
+//    "commands": "Server=acs-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive@acs-data; Pwd=aX9@QNQBfx&cFAtN; SslMode=Preferred; Command Timeout=180",
+//    "queries": "Server=acs-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive@acs-data; Pwd=aX9@QNQBfx&cFAtN; SslMode=Preferred; Command Timeout=180",
+    "acsstats": "Server=acs-test-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive; Pwd=aX9@QNQBfx&cFAtN; SslMode=Required; Command Timeout=180",
+    "commands": "Server=acs-test-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive; Pwd=aX9@QNQBfx&cFAtN; SslMode=Required; Command Timeout=180",
+    "queries": "Server=acs-test-data.mysql.database.azure.com; Port=3306; Database=cricketarchive; Uid=cricketarchive; Pwd=aX9@QNQBfx&cFAtN; SslMode=Required; Command Timeout=180",
   },
   "IdentityServer": {
     "Authority": "",
@@ -15,7 +18,7 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Override": {
         "Microsoft": "Information",
         "System": "Warning"
