--- a/AcsStatsWeb/ClientApp/package.json
+++ b/AcsStatsWeb/ClientApp/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/platform-server": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@coreui/angular": "^4.1.0",
+    "@coreui/coreui": "^4.2.0",
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-angular": "^4.1.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
