--- a/AcsStatsWeb/ClientApp/angular.json
+++ b/AcsStatsWeb/ClientApp/angular.json
@@ -32,7 +32,9 @@
               "src/styles.css",
               "src/grid.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
